# hpke-spec

./: .gitignore  Cargo.toml  Readme.md  crates.js  doc.sh  rust-toolchain  search-index.js  settings.html  source-files.js  test_and_check.sh
.github/workflows/: ci.yml  gh-pages.yml
aead/: Cargo.toml
aead/src/: aead.rs
errors/: Cargo.toml
fstar/: Aead.fst  Hacspec.Cryptolib.fst  Hpke.Errors.fst  Hpke.fst  Kdf.fst  Kem.fst  Makefile
hacspec_aes128_gcm/: all.html  constant.INVALID_TAG.html  fn.decrypt_aes128.html  fn.encrypt_aes128.html  index.html  sidebar-items.js  type.AesGcmByteSeqResult.html
hacspec_chacha20poly1305/: fn.chacha20_poly1305_decrypt.html  fn.chacha20_poly1305_encrypt.html  fn.finish.html  fn.init.html  fn.poly1305_update_padded.html  type.ByteSeqResult.html  type.ChaChaPolyIV.html  type.ChaChaPolyKey.html
hacspec_cryptolib/src/: cryptolib.rs
hacspec_curve25519/: all.html  fn.x25519_scalarmult.html  fn.x25519_secret_to_public.html  index.html  sidebar-items.js  struct.FieldCanvas.html  struct.Scalar.html  struct.ScalarCanvas.html  struct.X25519FieldElement.html  struct.X25519SerializedPoint.html  struct.X25519SerializedScalar.html
hacspec_hkdf/: all.html  enum.HkdfError.html  fn.expand.html  fn.extract.html  index.html  sidebar-items.js  type.HkdfByteSeqResult.html
hacspec_p256/: all.html  enum.Error.html  fn.p256_calculate_w.html  fn.p256_point_mul.html  fn.p256_point_mul_base.html  fn.p256_validate_private_key.html  fn.p256_validate_public_key.html  fn.point_add.html  index.html  sidebar-items.js  struct.Element.html  struct.FieldCanvas.html  struct.P256FieldElement.html  struct.P256Scalar.html  struct.ScalarCanvas.html  type.Affine.html  type.AffineResult.html
hpke/: Cargo.toml  Readme.md  Security.md  all.html  enum.Mode.html  fn.ComputeNonce.html  fn.ContextR_Open.html  fn.ContextS_Seal.html  fn.Context_Export.html  fn.HpkeOpen.html  fn.HpkeSeal.html  fn.IncrementSeq.html  fn.KeySchedule.html  fn.ReceiveExport.html  fn.SendExport.html  fn.SetupAuthPSKR.html  fn.SetupAuthPSKS.html  fn.SetupAuthR.html  fn.SetupAuthS.html  fn.SetupBaseR.html  fn.SetupBaseS.html  fn.SetupPSKR.html  fn.SetupPSKS.html  fn.VerifyPSKInputs.html  index.html  kem.md  sidebar-items.js  struct.HPKECiphertext.html  struct.HPKEConfig.html  struct.HPKEKeyPair.html  type.AdditionalData.html  type.Ciphertext.html  type.ContextResult.html  type.EmptyResult.html  type.HpkePrivateKey.html  type.HpkePublicKey.html  type.KemOutput.html  type.Psk.html  type.PskId.html  type.SenderContextResult.html
hpke/benches/: bench.rs
hpke/src/: aead.rs  hpke.rs  kdf.rs  kem.rs
hpke/tests/: derive_key_pair.rs  kat.rs  single_kat.rs  x25519_self.rs
hpke/wasm_demo/: Readme.md
hpke_aead/: all.html  enum.AEAD.html  fn.AeadOpen.html  fn.AeadSeal.html  fn.Nk.html  fn.Nn.html  fn.Nt.html  index.html  sidebar-items.js  type.Key.html  type.Nonce.html
hpke_errors/: all.html  enum.HpkeError.html  index.html  sidebar-items.js  type.HpkeByteSeqResult.html
hpke_kdf/: all.html  enum.KDF.html  fn.LabeledExpand.html  fn.LabeledExtract.html  fn.Nh.html  fn.kdf_value.html  index.html  sidebar-items.js  type.Info.html  type.InputKeyMaterial.html
hpke_kem/: all.html  enum.KEM.html  fn.AuthDecap.html  fn.AuthEncap.html  fn.DH.html  fn.Decap.html  fn.DeriveKeyPair.html  fn.DeriveKeyPairX.html  fn.DeserializePublicKey.html  fn.Encap.html  fn.GenerateKeyPair.html  fn.Ndh.html  fn.Nenc.html  fn.Npk.html  fn.Nsecret.html  fn.Nsk.html  fn.SerializePublicKey.html  fn.kem_value.html  index.html  sidebar-items.js  type.EncapResult.html  type.KeyPair.html  type.PrivateKey.html  type.PublicKey.html  type.Randomness.html  type.SerializedPublicKey.html  type.SharedSecret.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
kdf/: Cargo.toml  Readme.md
kdf/src/: kdf.rs
kem/: Cargo.toml  Readme.md
kem/src/: kem.rs
kem/tests/: x25519_self.rs
src/hacspec_aes128_gcm/: aes128-gcm.rs.html
src/hacspec_chacha20poly1305/: chacha20poly1305.rs.html
src/hacspec_curve25519/: curve25519.rs.html
src/hacspec_hkdf/: hkdf.rs.html
src/hacspec_p256/: p256.rs.html
src/hpke/: hpke.rs.html
src/hpke_aead/: aead.rs.html
src/hpke_errors/: errors.rs.html
src/hpke_kdf/: kdf.rs.html
src/hpke_kem/: kem.rs.html
(+32 files in other folders)
