[package]
name = "hpke_aead"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/aead.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
hacspec_cryptolib = { git = "https://github.com/cryspen/utils", package = "hacspec_cryptolib" }
evercrypt_cryptolib = { git = "https://github.com/cryspen/utils", package = "evercrypt_cryptolib", optional = true }

hpke_errors = { path = "../errors" }

[features]
evercrypt = ["evercrypt_cryptolib"]
