[package]
name = "hpke_aead"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/aead.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
libcrux = { git = "ssh://git@github.com/hacspec/rwc-2023-talk.git", features = ["hacspec"] }

hpke_errors = { path = "../errors" }
