[package]
name = "hpke_kdf"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/kdf.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
libcrux = { path = "../../rwc-2023-talk/libcrux", features = ["hacspec"] }

hpke_errors = { path = "../errors" }
