[package]
name = "hpke_kem"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/kem.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib", branch = "fake-secret-bytes" }
libcrux = { git = "ssh://git@github.com/hacspec/rwc-2023-talk.git", features = ["hacspec"] }

hpke_errors = { path = "../errors" }
hpke_kdf = { path = "../kdf" }
